@@ -1,5 +1,7 @@
 2011-05-24  Jason Merrill  <jason@redhat.com>
 
+	* g++.dg/cpp0x/error3.C: New.
+
 	* g++.dg/cpp0x/defaulted27.C: New.
 
 	* g++.dg/cpp0x/decltype27.C: New.
